[layout_widgets] add container, row_column example

--- a/layout_widgets/pubspec.yaml
+++ b/layout_widgets/pubspec.yaml
@@ -44,6 +44,7 @@ flutter:
   assets:
     - assets/london.jpg
     - assets/autumn-leaves.jpg
+    - assets/logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
