--- a/navigation_state/pubspec.yaml
+++ b/navigation_state/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  contacts_service: ^0.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
