--- a/layout_widgets/pubspec.yaml
+++ b/layout_widgets/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   contacts_service: ^0.3.9
+  permission_handler: ^4.0.0
 
 dev_dependencies:
   flutter_test:
