--- a/network_async/pubspec.yaml
+++ b/network_async/pubspec.yaml
@@ -49,8 +49,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/subway.png
-    - images/diamond.png
+    - assets/icon/subway.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
