--- a/platform_channels/pubspec.yaml
+++ b/platform_channels/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  permission_handler: ^4.0.0
   geolocator: ^5.1.5
 
 dev_dependencies:
