--- a/navigation_state/pubspec.yaml
+++ b/navigation_state/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: ^1.9.4
   flutter_launcher_icons: ^0.7.3
 
 flutter_icons:
